--- a/estilopagprin.css
+++ b/estilopagprin.css
@@ -156,7 +156,7 @@ footer > a{
 }
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 600px) and (max-width: 991px) {
 .titulo *{
     size: 100%;
     padding:0;
