--- a/estilopagprin.css
+++ b/estilopagprin.css
@@ -155,6 +155,29 @@ footer > a{
     font-size: 8px;
 }
 }
+#barramenu ul li{
+    position: relative;
+    float: left;
+    margin: 0;
+    padding: 0;
+}
+#barramenu ul li:hover{
+    background:rgb(59, 55, 55);
+}
+#barramenu ul ul {
+    display:none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    padding:0;
+}
+#barramenu ul ul li {
+    float:none;
+    width: 150px;
+}
+#barramenu ul li:hover > ul {
+    display:block;
+}
 
 @media only screen and (min-width: 600px) and (max-width: 800px) {
 .titulo *{
