--- a/estilotpo.css
+++ b/estilotpo.css
@@ -162,3 +162,37 @@ form {
       opacity: 1;
     }
   }
+
+  @media only screen and (max-width: 600px) {
+    .row{
+        flex-direction: column;
+    }
+    .imagenes{
+        width: 300px;
+        height: 200px;
+    }
+    aside{
+        padding: 0%;
+        text-align: center;
+    }
+    .menu{
+        font-size: 10px;
+        width: 20%;
+    
+    }
+    .present{
+        font-size: 25px;
+    }
+    .present2{
+        font-size: 15px;
+        line-height: 20px;
+    
+    }
+    footer > a{
+        font-size: 8px;
+    }
+    #barramenu{
+        flex-wrap: wrap;
+    }
+    }
+    
