--- a/estilotpo.css
+++ b/estilotpo.css
@@ -15,13 +15,24 @@
     color:beige;
     font-family: 'Lato', sans-serif;
     background-color: rgb(221, 168, 98);
+    margin: 0;
+    padding:0;
 
 }
-.menu_bar{
-    display: none;
+#hotelbou{
+    font-family: 'Lato', sans-serif;
+    font-size: 2em ;
+    font-weight: bold;
+    background-color: rgb(221, 168, 98);
+ 
 }
+#contactanos{
+    font-family: 'Lato', sans-serif;
+    font-size: 1.7em ;
+    font-weight: bold;
+    background-color: rgb(221, 168, 98);
 
-
+}
 
 header *{
     background-color: rgb(221, 168, 98);
@@ -187,6 +198,9 @@ form {
         font-size: 15px;
         line-height: 20px;
     
+    }
+    #servicios{
+        font-size: 25px;
     }
     footer > a{
         font-size: 8px;
