--- a/estilotpo.css
+++ b/estilotpo.css
@@ -199,7 +199,7 @@ form {
         line-height: 20px;
     
     }
-    #servicios{
+    #servicios > a{
         font-size: 15px;
         flex-wrap: wrap;
     }
